fixed some subsection type logic
